styles/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/*----------- Reset Ende -----------*/

html {
	width: 100%;
	height: 100%;
	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-size: 16px;
    font-weight: normal;
}

body {
	width: 100%;
	height: 100%;
	background-color: #000;
}

.siteWrap {
	width: 100%;
	height: calc(100% - 60px);
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-justify-content: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	-webkit-align-items: center;
	    -ms-flex-align: center;
	        align-items: center;
	text-align: left;
}

.siteWrap h1{
	max-width: 90%;
	font-size: 100px;
	font-weight: bolder;
	color: #FFF;
	line-height: 120%;
}

.siteWrap h1::-moz-selection {
	background-color: #000;
}

.siteWrap h1::selection {
	background-color: #000;
}

#reloadBtn {
	cursor: pointer;
	width: 100%;
	height: 60px;
	line-height: 60px;
	color: #777777;
	background-color: #2A2A2A;
	letter-spacing: 1px;
	text-align: center;
}

#reloadBtn:hover {
	background-color: #3E3E3E;
}

@media screen and (max-width: 960px) {
	.siteWrap h1{
		font-size: 80px;
	}
}

@media screen and (max-width: 640px) {
	.siteWrap h1{
		font-size: 50px;
	}
}

